ISPN-4254 Change build to require JDK7, drop animal-sniffer and JDK6 profiles